<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:res="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/gray_light_very"
    tools:context=".SumFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TYPE_NUMBERS"
        android:textColor="@color/gray_dark_very_transparent_light"
        style="@style/AtlanticTextMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/FIRST"
            android:textColor="@color/gray_dark_very_transparent_light"
            android:inputType="number"
            style="@style/AtlanticTextMedium"/>

        <EditText
            android:id="@+id/secondNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/SECOND"
            android:textColor="@color/gray_dark_very_transparent_light"
            android:inputType="number"
            style="@style/AtlanticTextMedium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/element_icon_size"
            android:layout_height="@dimen/element_icon_size"
            android:layout_marginRight="@dimen/margin_default"
            android:src="@drawable/ic_set_timer"/>

        <EditText
            android:id="@+id/timerDelayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_weight="1"
            android:hint="@string/TIMER_DELAY"
            android:textColor="@color/gray_dark_very_transparent_light"
            android:inputType="number"
            style="@style/AtlanticTextMedium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/element_icon_size"
            android:layout_height="@dimen/element_icon_size"
            android:layout_marginRight="@dimen/margin_default"
            android:src="@drawable/ic_sum_result"/>

        <TextView
            android:id="@+id/sumResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_gravity="center"
            android:text="@string/SUM_RESULT"
            android:textColor="@color/gray_dark_very_transparent_light"
            style="@style/AtlanticTextMedium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/startCounterButton"
            android:layout_width="@dimen/counter_size"
            android:layout_height="@dimen/counter_size"
            android:background="@drawable/round_button"
            android:text="10000"
            android:singleLine="true"
            android:textColor="@color/white_transparent_light"
            android:textSize="48sp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_up"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PUSH_BUTTON_HINT"
            android:gravity="center"
            android:textColor="@color/gray_dark_very_transparent_very"/>

    </LinearLayout>

</LinearLayout>
